# micro_simulator

./: CMakeLists.txt  imgui.ini
lib/: CMakeLists.txt
lib/description/: CMakeLists.txt
lib/description/parts/actuators/: CMakeLists.txt
lib/description/parts/actuators/motor_propeller_pair/: motor_propeller_pair.cpp  motor_propeller_pair.h
lib/description/parts/sensors/: CMakeLists.txt
lib/description/parts/structural/rigid/: CMakeLists.txt
lib/description/parts/structural/rigid/arm/: arm.h
lib/description/parts/structural/rigid/quadcopter_frame/: quadcopter_frame.cpp  quadcopter_frame.h
lib/description/parts/structural/soft/: CMakeLists.txt
lib/description/parts/structural/soft/gripper/: gripper.h
lib/description/primitives/: CMakeLists.txt
lib/description/primitives/actuators/: CMakeLists.txt
lib/description/primitives/actuators/motor/: motor.h
lib/description/primitives/sensors/: CMakeLists.txt
lib/description/primitives/structural/: CMakeLists.txt
lib/description/primitives/structural/softbody/: softbody.cpp  softbody.h
lib/helper/: CMakeLists.txt
lib/helper/src/: utils.cpp
lib/simulator/: CMakeLists.txt
lib/simulator/include/: simulator.h
lib/simulator/src/: simulator.cpp
lib/simulator_old/include/: simulator.h
lib/simulator_old/src/: simulator.cpp
math_helper/: math_helper.h
quadcopter_sim/: CMakeLists.txt
quadcopter_sim/controller/: CMakeLists.txt
quadcopter_sim/controller/controller_common/: motor_mixing.h
quadcopter_sim/controller/pid_cascaded/: CMakeLists.txt  controller_parameters.yaml  horizontal_controller.cpp  pid_cascaded.cpp  pid_cascaded.h  pid_controllers.cpp
quadcopter_sim/controller/pid_cascaded/include/: pid_cascaded.h
quadcopter_sim/controller/pid_cascaded/src/pid_controllers/: horizontal_pid.cpp  reduced_attitude_pid.cpp  vertical_pid.cpp
quadcopter_sim/controller/pid_cascaded/src/sub_controllers/: angular_rate_controller.cpp  horizontal_controller.cpp  vertical_controller.cpp
quadcopter_sim/quadcopter/: CMakeLists.txt
quadcopter_sim/quadcopter/include/: quadcopter.h
quadcopter_sim/quadcopter/src/: common.cpp  description.cpp  dynamics.cpp  euler_integration.cpp  initial_conditions.cpp  sensor_read.cpp
quadcopter_sim/quadcopter_sim_app/: CMakeLists.txt
quadcopter_sim/quadcopter_sim_app/include/: plot.h
quadcopter_sim/quadcopter_sim_app/parameters/: initial_conditions.yaml  plot_parameters.yaml  quad_properties.yaml  simulation_parameters.yaml
quadcopter_sim/quadcopter_sim_app/src/: altitude_loop_tune.cpp  attitude_loop_tune.cpp  display_parameters_demo.cpp  main.cpp  plot.cpp
src/: main.cpp
src/description/: CMakeLists.txt
src/description/examples/: CMakeLists.txt
src/description/examples/quadcopter/: CMakeLists.txt
src/description/examples/quadcopter/include/: quadcopter.h
src/description/examples/quadcopter/parameters/actuators/: motor4_parameters.yaml
src/description/examples/quadcopter/src/: main.cpp  quadcopter_description.cpp  quadcopter_dynamics.cpp
src/description/examples/quadcopter_old/: CMakeLists.txt
src/description/examples/quadcopter_old/include/: quadcopter_old.h
src/description/examples/quadcopter_old/src/: main_old.cpp  quadcopter_old.cpp
src/description/examples/raptor/: CMakeLists.txt
src/description/examples/raptor/include/: raptor.h
src/description/examples/raptor/parameters/: arm_parameters.yaml  gripper_parameters.yaml
src/description/examples/raptor/src/: main.cpp  raptor.cpp
src/description/parts/: CMakeLists.txt
src/description/parts/actuators/: CMakeLists.txt
src/description/parts/actuators/bldc_motor/: bldc_motor.cpp  bldc_motor.h
src/description/parts/actuators/motor_propeller_pair/: motor_propeller_pair.cpp  motor_propeller_pair.h
src/description/parts/structural/: CMakeLists.txt
src/description/parts/structural/rigid/: CMakeLists.txt
src/description/parts/structural/rigid/arm/: arm.cpp  arm.h
src/description/parts/structural/rigid/quadcopter_frame/: quadcopter_frame.cpp  quadcopter_frame.h
src/description/parts/structural/soft/: CMakeLists.txt
src/description/parts/structural/soft/gripper/: gripper.cpp  gripper.h
src/description/primitives/: CMakeLists.txt
src/description/primitives/actuators/: CMakeLists.txt
src/description/primitives/actuators/motor/: motor.cpp  motor.h
src/description/primitives/structural/: CMakeLists.txt
src/description/primitives/structural/rigidbody/: rigidbody.h
src/description/primitives/structural/softbody/: softbody.cpp  softbody.h
src/helper/include/: utils.h
src/simulation/include/: set_initial_conditions.h  set_parameters.h
src/simulation_app/: CMakeLists.txt
src/simulation_app/include/: set_initial_conditions.h  set_parameters.h
src/simulation_app/src/: main.cpp
src/simulator/: CMakeLists.txt  euler_forward.h  runga_kutt.h
src/simulator/include/: simulator.h
src/simulator/src/: simulator.cpp
src/simulator_app/: CMakeLists.txt
src/simulator_app/include/: quadcopter.h  quadcopter_description.h  set_initial_conditions.h  set_parameters.h
src/simulator_app/parameters/: initial_conditions.yaml  quadcopter.yaml  simulation_parameters.yaml
src/simulator_app/src/: common.cpp  dynamics.cpp  euler_integration.cpp  initial_conditions.cpp  main.cpp  quadcopter_description.cpp  quadcopter_initial_conditions.cpp  quadcopter_sensing.cpp
